# MidiBanker

./: CMakeLists.txt  README.md
resource/: Info.plist  Yamaha MU50.txt  plug.rc
source/: devicepatch.cpp  devicepatch.h  parser.cpp  plugcontroller.cpp  plugcontroller.h  plugfactory.cpp  plugids.h  plugprocessor.cpp  plugprocessor.h  test_parser.cpp  version.h
